# jelly-mem_access

./: .gitignore  Cargo.toml  README.md  README_jp.md  rust-toolchain
src/: bus_accessor.rs  lib.rs  mem_accessor.rs  mmap_accessor.rs  mmio_accessor.rs  phys_accessor.rs  shared_bus_accessor.rs  udmabuf_accessor.rs  uio_accessor.rs
