[package]
name = "jelly-mem_access"
version = "0.2.4"
authors = ["Ryuz <ryufuchi@gmail.com>"]
edition = "2021"
repository = "https://github.com/ryuz/jelly-mem_access"
keywords = ["mmio", "uio", "udmabuf", "u-dma-buf"]
license = "MIT"

description = "Memory Mapped I/O access library"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=["nix", "nix/mman", "libc", "thiserror"]

[dependencies]
delegate = "^0.13.1"
nix = { version = "^0.29.0", features = ["poll"], optional = true }
libc = { version = "^0.2.155", optional = true }
thiserror = { version = "^1.0.65", optional = true }
