[package]
name = "jelly-mem_access"
version = "0.2.9"
authors = ["Ryuz <ryuz@rtc-lab.com>"]
edition = "2021"
repository = "https://github.com/ryuz/jelly-mem_access"
keywords = ["mmio", "uio", "udmabuf", "u-dma-buf"]
license = "MIT"

description = "Memory Mapped I/O access library"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=["nix", "nix/mman", "libc", "thiserror"]

[dependencies]
delegate = { version = ">= 0.5, < 0.14" }
nix = { version = ">= 0.28, < 0.31", features = ["poll"], optional = true }
libc = { version = ">= 0.2, < 0.3", optional = true }
thiserror = { version = ">= 1.0, < 3.0", optional = true }
